finish CRUD product with change on sizes and colors
category ready to integtartion

still working on cart and offers
